修复，修改 尝试修复了因精英技术侦察兵死于dot伤害而导致的完全卡死问题(似乎还有其他的引发方式，但不确定) 修复了将其他卷轴重命名为驱邪后无法使用重命名后的驱邪卷轴驱邪诅咒迷迭香日记的问题 同步了一些来自破碎的更改